--- a/pom.xml
+++ b/pom.xml
@@ -7,23 +7,24 @@
     <groupId>groupId</groupId>
     <artifactId>CucumberBasics</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-    <build>
-            <properties>
+         <properties>
+         <java.home>C:\Program Files\Java\jdk1.8.0_261</java.home>
          <maven.compiler.source>1.8</maven.compiler.source>
          <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+         </properties>
+    <build>
+
              <plugins>
 
-<plugin>
+         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>2.4</version>
-            <configuration>
+         <configuration>
                 <source>1.8</source>
                 <target>1.8</target>
-</configuration>
-</plugin>
+         </configuration>
+         </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
