--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>CucumberBasics</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+        <properties>
+          <JAVA_HOME>C:\Program Files\Java\jdk1.8.0_261>
+        </properties>
+
     <build>
         <plugins>
 
