--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 
         <properties>
-          <JAVA_HOME>C:\Program Files\Java\jdk1.8.0_261</JAVA_HOME>
+                 <maven.compiler.source>1.8</maven.compiler.source> 
+                 <maven.compiler.target>1.8</maven.compiler.target>
         </properties>
 
     <build>
