--- a/pom.xml
+++ b/pom.xml
@@ -98,14 +98,14 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.0.0-alpha-3</version>
+            <version>4.0.0-alpha-6</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-chrome-driver -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-chrome-driver</artifactId>
-            <version>4.0.0-alpha-3</version>
+            <version>4.0.0-alpha-6</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
@@ -115,8 +115,11 @@
             <artifactId>extentreports</artifactId>
             <version>4.1.5</version>
         </dependency>
-
-
+<dependency>
+         <groupId>org.seleniumhq.selenium</groupId>
+         <artifactId>selenium-server</artifactId>
+         <version>3.141.59</version>
+</dependency>
 
     </dependencies>
 </project>
